# constellation-core

./: .gitignore  404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
agents/: index.html
build-a-domain/: index.html
changelog/: index.html
concepts/: index.html
configuration/: index.html
contributing/: index.html
docs/: CONSTELLATION-CORE-TIER1-REVISED.md  agents.md  build-a-domain.md  changelog.md  concepts.md  configuration.md  contributing.md  examples.md  faq.md  getting-started.md  index.md  persistence.md  plugin-protocol.md  viewer.md
docs/stylesheets/: extra.css
examples/: index.html
examples/reorg/: README.md
examples/stock_market/: config.yaml  plugin.py
examples/supply_chain/: config.yaml  plugin.py
faq/: index.html
getting-started/: index.html
persistence/: index.html
plugin-protocol/: index.html
sdlc/: SDLC.md
sdlc/docs/architecture/: constellation-core-spec.md
sdlc/docs/runbooks/: phase-a-constellation-core-prs.md
sdlc/docs/strategy/: next-steps.md  (+1 more)
search/: search_index.json
src/constellation_core/: __init__.py  __main__.py
tests/test_agent/: test_model.py  test_runner.py
tests/test_config/: test_loader.py
tests/test_engine/: test_simulation.py  test_tick.py
tests/test_examples/: test_stock_market.py  test_supply_chain.py
tests/test_persistence/: test_sqlite.py
tests/test_topology/: test_graph.py  test_state.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  types.ts
(+24 files in other folders)
