[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constellation-core"
version = "0.2.1"
description = "Domain-agnostic simulation platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sse-starlette>=1.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
docs = [
    "mkdocs-material>=9.5,<10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/constellation_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
